--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "remove-green-background",
+  "name": "react-remove-green-background",
   "version": "1.0.0",
   "description": "Made with create-react-library",
   "author": "serkancagman",
